// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1"
  >
    <span
      className="MuiSwitch-root-5"
    >
      <span
        className="MuiButtonBase-root-25 MuiIconButton-root-19 MuiSwitchBase-root-14 MuiSwitchBase-default-16 MuiSwitch-default-9"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-24"
        >
          <span
            className="MuiSwitch-icon-7"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-15"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
        <span
          className="MuiTouchRipple-root-28"
        />
      </span>
      <span
        className="MuiSwitch-bar-6"
      />
    </span>
    <span
      className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-3"
    >
      Title
    </span>
  </label>
</div>
`;

exports[`renders disabled 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1 MuiFormControlLabel-disabled-2"
  >
    <span
      className="MuiSwitch-root-5"
    >
      <span
        className="MuiButtonBase-root-25 MuiButtonBase-disabled-26 MuiIconButton-root-19 MuiIconButton-disabled-23 MuiSwitchBase-root-14 MuiSwitchBase-default-16 MuiSwitch-default-9 MuiSwitchBase-disabled-18 MuiSwitch-disabled-13"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-24"
        >
          <span
            className="MuiSwitch-icon-7"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-15"
            disabled={true}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-bar-6"
      />
    </span>
    <span
      className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-3 MuiFormControlLabel-labelDisabled-4"
    >
      Title
    </span>
  </label>
</div>
`;

exports[`renders with helper text 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1"
  >
    <span
      className="MuiSwitch-root-5"
    >
      <span
        className="MuiButtonBase-root-25 MuiIconButton-root-19 MuiSwitchBase-root-14 MuiSwitchBase-default-16 MuiSwitch-default-9"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-24"
        >
          <span
            className="MuiSwitch-icon-7"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-15"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
        <span
          className="MuiTouchRipple-root-28"
        />
      </span>
      <span
        className="MuiSwitch-bar-6"
      />
    </span>
    <span
      className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-3"
    >
      Title
    </span>
  </label>
  <p
    className="MuiFormHelperText-root-59"
  >
    test
  </p>
</div>
`;
